# learnOpengl

./: 2triangle.cpp  CMakeLists.txt  README.md  face_tex.cpp  face_tex_bak.cpp  mk.sh  tex_box.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
